Clean up css, fix overflows, change hover effect

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ a {
     font-size: 14px;
     opacity: 75%;
     /* padding-left: 52px; */
-
+    overflow: hidden;
 }
 
 .category-title {
@@ -187,55 +187,52 @@ a {
     height: 64px;
 }
 
-.category-item-favicon {
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    top: 9px;
-    left: 8px;
+.category-item {
+    display: flex;
+    align-items: center;
     overflow: hidden;
-    border-radius: 50%;
+    width: 100%;
 }
+
+.category-item-favicon {
+    width: 48px;
+    height: 48px;
+    min-width: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
 
 .category-item-favicon > img {
-    position: absolute;
     width: 24px;
-    top: 4px;
-    left: 4px;
     image-rendering: crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
 }
+
 
 .category-item-underline {
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: white;
-    visibility: hidden;
+    height: 100%;
+    width: 0px;
+    transition: ease-out width 0.025s;
 }
 
-.category-item:hover .category-item-underline {
-    visibility: visible;
+.category-item:hover > .category-item-underline {
+    width: 4px;    
+}
+
+
+.category-item-text, .category-item-title, .category-item-url {
+    font-family: 'Microsoft Sans Serif';
+    box-sizing: border-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .category-item-title {
-    position: absolute;
-    left: 52px;
-    top: 8px;
-    width: 100%;
     font-size: 14px;
-    font-family: 'Microsoft Sans Serif';
 }
 
 .category-item-url {
-    position: absolute;
-    left: 52px;
-    top: 28px;
-    width: 100%;
     font-size: 10px;
-    font-family: 'Microsoft Sans Serif';
 }
-
-
-/* ========================================================================= */
